<resources>

    <string name="app_name">Bataille Navale</string>
    <string name="menu_settings">Settings</string>
    <string name="ip_address">Adresse IP</string>
    <string name="nickname">Pseudonyme</string>
    <string name="play_against_the_computer">Jouer contre l\'ordinateur</string>
    <string name="create_multiplayer_game">Créer une partie multijoueur</string>
    <string name="join_multiplayer_game">Rejoindre une partie multijoueur</string>
    <string name="copyrigth">Bruno MULLER &amp; Nicolas DEVENET - ENSISA</string>
    <string name="connexion">Connexion</string>

</resources>